--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,12 @@ body{
 .card:not(:nth-child(3n)){
     margin-right: 20px; /* отступ справа для всех карточек кроме каждой третьей*/
 }
+.icon-like{
+    fill: #C4C4C4;
+}
+.icon-like:hover{
+    fill: #256EEB;
+}
 .card-title{
     font-size: 16px;
     line-height: 19px;
@@ -113,11 +119,18 @@ body{
     color: #256EEB;
     margin-top: 12px;
     margin-bottom: 5px;
+
+    /* обрезаный текст с многоточием */
+    /* white-space: nowrap; // запрет переноса текста 
+    text-overflow: ellipsis; // многоточие 
+    overflow-x: hidden; // обрезание текста что не помещается 
+    width: 220px; */
 }
 .card-header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 264px; /* максимальная ширина блока карточки */
 }
 .like{
     border:none;
@@ -127,6 +140,7 @@ body{
 }
 .card-link{
     text-decoration: none;
+    color: #256EEB;
 }
 .card-price{
     font-size: 16px;
@@ -178,4 +192,124 @@ body{
     text-decoration: none; /* убираем подчеркивание ссылок */
     display: inline-block;
     margin-bottom: 5px;
+}
+
+
+.main-single{
+    display: flex;
+    align-items: flex-start;
+}
+/* настройки слайдера */
+.content{
+    max-width: 460px;
+    margin-right: 30px;
+}
+.swiper-container {
+    width: 100%;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.swiper-slide {
+    background-size: cover;
+    background-position: center;
+}
+
+.mySwiper2 {
+    /* height: 80%; */
+    width: 100%;
+    border-radius: 10px;
+}
+
+.mySwiper {
+    height: 20%;
+    box-sizing: border-box;
+    padding: 10px 0;
+}
+
+.mySwiper .swiper-slide {
+    width: 25%;
+    height: 100%;
+    opacity: 0.4;
+    border-radius: 10px;
+}
+
+.mySwiper .swiper-slide-thumb-active {
+    opacity: 1;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 3px;
+}
+
+
+.content-text{
+    font-size: 14px;
+    line-height: 140%;
+}
+.single-prise{
+    font-size: 24px;
+    line-height: 28px;
+     margin-top: 0;
+     margin-bottom: 25px;
+     display: block;
+}
+.page-title{
+    margin-top: 0;
+    margin-bottom: 25px;
+}
+.author{
+    min-width: 264px;
+}
+.author-wrapper{
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
+    /* min-width: 264px; */
+    margin-top: 25px;
+    margin-bottom: 30px;
+}
+.author-avatar{
+    width: 50px;
+    height: 50px;
+    object-fit: cover; /* чтобы не растягивалась */ 
+    border-radius: 50%;
+}
+.author-name{
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    display: block;
+    margin-bottom: 4px;
+}
+.rating{
+    margin-bottom: 5px;
+}
+.rating-counter{
+    color: #0A143A;
+    opacity: 0.5;
+    margin-left: 10px;
+}
+.author-status{
+    font-size: 12px;
+    line-height: 14px;
+    /* identical to box height */
+    color: #0A143A;
+}
+.button-block{
+    display: block;
+    width: 100%;
+    height: 54px;
+    margin-bottom: 14px;
+    border:none;
+}
+.button-success{
+    background-color: #14B4BE;
+    border-radius: 5px;
+    color:#fff;
 }
